--- a/assets/style/layout/_nav.scss
+++ b/assets/style/layout/_nav.scss
@@ -5,6 +5,7 @@ nav {
     position: fixed;
     top: 0;
     padding: 15px 0;
+    z-index: 100;
 
     .logosymbol {
         position: absolute;
@@ -20,6 +21,7 @@ nav {
         display: flex;
         margin: 0 25px 0 53px;
         position: relative;
+        z-index: 100;
 
         li {
             margin-right: 27px;
@@ -55,21 +57,55 @@ nav {
     }
 
     .globe {
-        color: $white;
         filter: invert(100%);
         height: 22px;
         position: absolute;
         right: 25px;
     }
 
-    .build-clicked {
+    .build-nav {
+        visibility: hidden;
         position: absolute;
-        bottom: -100px;
-        left: 750px;
+        bottom: -305px;
+        left: 760px;
         background: $white;
-        width: 150px;
-        height: 100px;
-        visibility: visible;
+        width: 315px;
+        padding: 27px 22px 0;
+        border-radius: 5px;
+        opacity: 0;
+        transition: 0.2s ease;
+        transform: translateY(-10px);
+        z-index: 1;
+
+        .build-nav-content {
+            margin-bottom: 30px;
+
+            h3 {
+                color: $black2;
+                font-size: 1rem;
+                font-weight: 500;
+                margin-bottom: 6px;
+                line-height: 16px;
+            }
+
+            p {
+                color: #7f7f7f;
+                font-size: 0.9rem;
+                font-weight: 400;
+                line-height: 16px;
+            }
+        }
     }
 
+    .build-clicked {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .build-declicked {
+        visibility: visible;
+        opacity: 0;
+        transform: translateY(10px);
+    }
 }
