--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,6 +29,7 @@ nav {
   position: fixed;
   top: 0;
   padding: 15px 0;
+  z-index: 100;
 }
 nav .logosymbol {
   position: absolute;
@@ -42,6 +43,7 @@ nav ul {
   display: flex;
   margin: 0 25px 0 53px;
   position: relative;
+  z-index: 100;
 }
 nav ul li {
   margin-right: 27px;
@@ -71,18 +73,48 @@ nav ul:after {
   right: 0px;
 }
 nav .globe {
-  color: #FFFFFF;
   filter: invert(100%);
   height: 22px;
   position: absolute;
   right: 25px;
 }
-nav .build-clicked {
+nav .build-nav {
+  visibility: hidden;
   position: absolute;
-  bottom: -100px;
-  left: 750px;
+  bottom: -305px;
+  left: 760px;
   background: #FFFFFF;
-  width: 150px;
-  height: 100px;
+  width: 315px;
+  padding: 27px 22px 0;
+  border-radius: 5px;
+  opacity: 0;
+  transition: 0.2s ease;
+  transform: translateY(-10px);
+  z-index: 1;
+}
+nav .build-nav .build-nav-content {
+  margin-bottom: 30px;
+}
+nav .build-nav .build-nav-content h3 {
+  color: #1D1D1D;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 6px;
+  line-height: 16px;
+}
+nav .build-nav .build-nav-content p {
+  color: #7f7f7f;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 16px;
+}
+nav .build-clicked {
   visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+}
+nav .build-declicked {
+  visibility: visible;
+  opacity: 0;
+  transform: translateY(10px);
 }/*# sourceMappingURL=style.css.map */
