--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -18,6 +18,7 @@ li {
 body {
   max-width: 100vw;
   background: #1B1B1B;
+  height: 100vh;
 }
 
 nav {
@@ -114,6 +115,46 @@ nav .build-clicked {
   transform: translateY(0);
 }
 nav .build-declicked {
+  visibility: visible;
+  opacity: 0;
+  transform: translateY(10px);
+}
+nav .use-nav {
+  visibility: hidden;
+  position: absolute;
+  bottom: -305px;
+  left: 840px;
+  background: #FFFFFF;
+  width: 315px;
+  padding: 27px 22px 0;
+  border-radius: 5px;
+  opacity: 0;
+  transition: 0.2s ease;
+  transform: translateY(-10px);
+  z-index: 1;
+}
+nav .use-nav .use-nav-content {
+  margin-bottom: 30px;
+}
+nav .use-nav .use-nav-content h3 {
+  color: #1D1D1D;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 6px;
+  line-height: 16px;
+}
+nav .use-nav .use-nav-content p {
+  color: #7f7f7f;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 16px;
+}
+nav .use-clicked {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+}
+nav .use-declicked {
   visibility: visible;
   opacity: 0;
   transform: translateY(10px);
