--- a/assets/style/layout/_nav.scss
+++ b/assets/style/layout/_nav.scss
@@ -57,28 +57,42 @@ nav {
     }
 
     .globe {
-        filter: invert(100%);
         height: 22px;
-        position: absolute;
-        right: 25px;
+
+        img {
+            filter: invert(100%);
+            height: 22px;
+            position: absolute;
+            right: 25px;
+            cursor: pointer;
+
+            &:hover {
+                filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(192deg) brightness(134%) contrast(97%);
+            }
+
+        }
     }
 
     .build-nav {
         visibility: hidden;
         position: absolute;
         bottom: -305px;
-        left: 760px;
+        left: 730px;
         background: $white;
         width: 315px;
-        padding: 27px 22px 0;
+        padding: 20px 0 0;
         border-radius: 5px;
         opacity: 0;
-        transition: 0.2s ease;
+        transition: 0.3s ease;
         transform: translateY(-10px);
         z-index: 1;
 
         .build-nav-content {
-            margin-bottom: 30px;
+            margin-bottom: 15px;
+            height: 55px;
+            padding-top: 8px;
+            transition: 0.4s ease;
+            cursor: pointer;
 
             h3 {
                 color: $black2;
@@ -86,6 +100,7 @@ nav {
                 font-weight: 500;
                 margin-bottom: 6px;
                 line-height: 16px;
+                margin-left: 22px;
             }
 
             p {
@@ -93,30 +108,23 @@ nav {
                 font-size: 0.9rem;
                 font-weight: 400;
                 line-height: 16px;
+                margin-left: 22px;
+            }
+
+            &:hover {
+                background: #ebebeb;
             }
         }
-    }
-
-    .build-clicked {
-        visibility: visible;
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .build-declicked {
-        visibility: visible;
-        opacity: 0;
-        transform: translateY(10px);
     }
 
     .use-nav {
         visibility: hidden;
         position: absolute;
         bottom: -305px;
-        left: 840px;
+        left: 810px;
         background: $white;
         width: 315px;
-        padding: 27px 22px 0;
+        padding: 20px 0 0;
         border-radius: 5px;
         opacity: 0;
         transition: 0.2s ease;
@@ -124,7 +132,11 @@ nav {
         z-index: 1;
 
         .use-nav-content {
-            margin-bottom: 30px;
+            margin-bottom: 15px;
+            height: 55px;
+            padding-top: 8px;
+            transition: 0.3s ease;
+            cursor: pointer;
 
             h3 {
                 color: $black2;
@@ -132,6 +144,7 @@ nav {
                 font-weight: 500;
                 margin-bottom: 6px;
                 line-height: 16px;
+                margin-left: 22px;
             }
 
             p {
@@ -139,19 +152,92 @@ nav {
                 font-size: 0.9rem;
                 font-weight: 400;
                 line-height: 16px;
+                margin-left: 22px;
+            }
+
+            &:hover {
+                background: #ebebeb;
             }
         }
     }
 
-    .use-clicked {
+    .resources-nav {
+        visibility: hidden;
+        position: absolute;
+        bottom: -237px;
+        left: 880px;
+        background: $white;
+        width: 287px;
+        padding: 20px 0 0;
+        border-radius: 5px;
+        opacity: 0;
+        transition: 0.2s ease;
+        transform: translateY(-10px);
+        z-index: 1;
+
+        .resources-nav-content {
+            margin-bottom: 15px;
+            height: 55px;
+            padding-top: 8px;
+            transition: 0.3s ease;
+            cursor: pointer;
+
+            h3 {
+                color: $black2;
+                font-size: 1rem;
+                font-weight: 500;
+                margin-bottom: 6px;
+                line-height: 16px;
+                margin-left: 22px;
+            }
+
+            p {
+                color: #7f7f7f;
+                font-size: 0.9rem;
+                font-weight: 400;
+                line-height: 16px;
+                margin-left: 22px;
+            }
+
+            &:hover {
+                background: #ebebeb;
+            }
+        }
+    }
+
+    .globe-nav {
+        visibility: hidden;
+        position: absolute;
+        bottom: -325px;
+        right: 20px;
+        background: $white;
+        width: 140px;
+        padding: 27px 0 15px;
+        border-radius: 10px;
+        opacity: 0;
+        transition: 0.2s ease;
+        z-index: 1;
+        text-align: center;
+
+        p {
+            margin-bottom: 12px;
+
+            a {
+                color: $blackf;
+                font-weight: 600;
+                color: #38a2ff;
+                letter-spacing: -0.5px;
+
+                &:hover {
+                    color: #be73ff;
+                }
+            }
+        }
+    }
+
+    .clicked {
         visibility: visible;
         opacity: 1;
         transform: translateY(0);
-    }
-
-    .use-declicked {
-        visibility: visible;
-        opacity: 0;
-        transform: translateY(10px);
     }
 }
