--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -2,6 +2,8 @@ header {
     display: grid;
     grid-template-columns: 50% 50%;
     height: 100vh;
+    background: #1d1d1d url("../../svg/isoheaderbg.svg") center no-repeat;
+    background-size: cover;
 
     .header-left {
         display: flex;
@@ -21,6 +23,8 @@ header {
                 justify-content: space-between;
                 align-items: center;
                 margin-bottom: 30px;
+                transition: 0.2s;
+                font-size: 0.9rem;
 
                 img {
                     height: 12px;
@@ -37,17 +41,18 @@ header {
             }
 
             h1 {
-                font-size: 6.8rem;
+                font-size: 6.7rem;
                 line-height: 99px;
                 margin-bottom: 20px;
+                letter-spacing: -4px;
             }
 
             h3 {
                 color: $color3;
-                font-size: 1.8rem;
-                font-weight: 300;
-                line-height: 36px;
-                margin-bottom: 20px;
+                font-size: 1.7rem;
+                font-weight: 100;
+                line-height: 38px;
+                margin-bottom: 19px;
             }
 
             p {
@@ -55,11 +60,80 @@ header {
                 line-height: 28px;
                 font-size: 1.2rem;
                 opacity: 0.8;
+                margin-bottom: 40px;
+            }
+
+            .header-buttons {
+
+                button {
+                    color: $blackf;
+                    padding: 16px 26px;
+                    border-radius: 8px;
+                    font-weight: 600;
+                    font-size: 1.1rem;
+                    transition: 0.2s;
+                    cursor: pointer;
+
+                    &:hover {
+                        opacity: 0.8;
+                        transform: translateY(2px);
+                    }
+                }
+
+                .button-blue {
+                    background: $color3;
+                }
+
+                .button-purple {
+                    background: #A334FB;
+                }
+
+                .button-green {
+                    background: $color5;
+                }
             }
         }
     }
 
     .header-right {
-        background: url("../img/base.png");
+        position: relative;
+
+        .base {
+            width: 140%;
+            position: absolute;
+            top: 50%;
+            left: 70%;
+            transform: translate(-50%, -50%);
+        }
+
+        .div-lignes {
+            transform: translate(-50%, -50%) scale(1.8);
+            position: absolute;
+            left: 37%;
+            top: 48%;
+            perspective: none;
+
+            .ligns {
+                transform: rotateX(54.7356103deg) rotateY(0deg) rotateZ(45deg);
+                width: 135%;
+            }
+
+        }
+
+        .topmain {
+            position: absolute;
+            left: 81%;
+            top: 49%;
+            width: 76%;
+            transform: translate(-50%, -50%);
+        }
+
+        .marker {
+            position: absolute;
+            width: 18.4%;
+            top: 49%;
+            left: 29%;
+            transform: translate(-50%, -50%);
+        }
     }
 }
