--- a/assets/style/layout/_nav.scss
+++ b/assets/style/layout/_nav.scss
@@ -6,6 +6,7 @@ nav {
     top: 0;
     padding: 10px 0;
     z-index: 100;
+    backdrop-filter: saturate(180%) blur(20px);
 
     .logosymbol {
         position: absolute;
