--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -35,6 +35,8 @@ nav {
   top: 0;
   padding: 10px 0;
   z-index: 100;
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+          backdrop-filter: saturate(180%) blur(20px);
 }
 nav .logosymbol {
   position: absolute;
@@ -243,6 +245,8 @@ header {
   display: grid;
   grid-template-columns: 50% 50%;
   height: 100vh;
+  background: #1d1d1d url("../../svg/isoheaderbg.svg") center no-repeat;
+  background-size: cover;
 }
 header .header-left {
   display: flex;
@@ -262,6 +266,8 @@ header .header-left .header-left-content .hotspots {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+  transition: 0.2s;
+  font-size: 0.9rem;
 }
 header .header-left .header-left-content .hotspots img {
   height: 12px;
@@ -274,23 +280,79 @@ header .header-left .header-left-content .hotspots:hover img {
   opacity: 1;
 }
 header .header-left .header-left-content h1 {
-  font-size: 6.8rem;
+  font-size: 6.7rem;
   line-height: 99px;
   margin-bottom: 20px;
+  letter-spacing: -4px;
 }
 header .header-left .header-left-content h3 {
   color: #474DFF;
-  font-size: 1.8rem;
-  font-weight: 300;
-  line-height: 36px;
-  margin-bottom: 20px;
+  font-size: 1.7rem;
+  font-weight: 100;
+  line-height: 38px;
+  margin-bottom: 19px;
 }
 header .header-left .header-left-content p {
   font-weight: 300;
   line-height: 28px;
   font-size: 1.2rem;
   opacity: 0.8;
+  margin-bottom: 40px;
+}
+header .header-left .header-left-content .header-buttons button {
+  color: #111111;
+  padding: 16px 26px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 1.1rem;
+  transition: 0.2s;
+  cursor: pointer;
+}
+header .header-left .header-left-content .header-buttons button:hover {
+  opacity: 0.8;
+  transform: translateY(2px);
+}
+header .header-left .header-left-content .header-buttons .button-blue {
+  background: #474DFF;
+}
+header .header-left .header-left-content .header-buttons .button-purple {
+  background: #A334FB;
+}
+header .header-left .header-left-content .header-buttons .button-green {
+  background: #0ACF83;
 }
 header .header-right {
-  background: url("../img/base.png");
+  position: relative;
+}
+header .header-right .base {
+  width: 140%;
+  position: absolute;
+  top: 50%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
+header .header-right .div-lignes {
+  transform: translate(-50%, -50%) scale(1.8);
+  position: absolute;
+  left: 37%;
+  top: 48%;
+  perspective: none;
+}
+header .header-right .div-lignes .ligns {
+  transform: rotateX(54.7356103deg) rotateY(0deg) rotateZ(45deg);
+  width: 135%;
+}
+header .header-right .topmain {
+  position: absolute;
+  left: 81%;
+  top: 49%;
+  width: 76%;
+  transform: translate(-50%, -50%);
+}
+header .header-right .marker {
+  position: absolute;
+  width: 18.4%;
+  top: 49%;
+  left: 29%;
+  transform: translate(-50%, -50%);
 }/*# sourceMappingURL=style.css.map */
