--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -4,11 +4,27 @@ header {
     height: 100vh;
     background: #1d1d1d url("../../svg/isoheaderbg.svg") center no-repeat;
     background-size: cover;
+    opacity: 0;
+    animation: headerAnim 2.5s forwards;
+
+    @keyframes headerAnim {
+        to {
+            opacity: 1;
+        }
+    }
 
     .header-left {
         display: flex;
         justify-content: center;
         align-items: center;
+        transform: translateX(-40px);
+        animation: headerLeftAnim 1.5s forwards;
+
+        @keyframes headerLeftAnim {
+            to {
+                transform: translateX(0);
+            }
+        }
 
         .header-left-content {
             max-width: 490px;
@@ -23,7 +39,6 @@ header {
                 justify-content: space-between;
                 align-items: center;
                 margin-bottom: 30px;
-                transition: 0.2s;
                 font-size: 0.9rem;
 
                 img {
@@ -32,7 +47,7 @@ header {
                 }
 
                 &:hover {
-                    background: 0.8;
+                    background: linear-gradient(90.06deg, rgba(136, 22, 227, 0.7) 10.06%, rgba(213, 20, 159, 0.7) 92.17%);
 
                     img {
                         opacity: 1;
