--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -55,8 +55,13 @@ body {
     max-width: 100vw;
     background: $black3;
     height: 100vh;
+    cursor: url(CURSOR_URL), auto;
 }
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+button {
+    background: none;
 }
