--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -24,13 +24,15 @@
                 .btn-news {
                     padding: 50px 45px 20px 20px;
                     border-radius: 20px;
-                    opacity: 0.85;
+                    opacity: 0.8;
                     cursor: pointer;
-                    transition: 0.2s;
+                    transition: 0.3s ease;
                     display: block;
 
                     &:hover {
                         opacity: 1;
+                        scale: 1.03;
+                        border-radius: 17px;
                     }
 
                     h4 {
@@ -45,12 +47,15 @@
                         margin-bottom: 0;
                         line-height: 20px;
                         opacity: 1;
-                        z-index: 1;
                     }
                 }
 
                 .red {
                     background: url("../img/newsorange.png") center/cover;
+
+                    h2 {
+                        opacity: 1;
+                    }
                 }
 
                 .green {
@@ -65,6 +70,35 @@
                     background: url("../img/newspurple.png") center/cover;
                 }
             }
+
+            .news-partnairs {
+                margin-top: 100px;
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 60px;
+                border-bottom: 1px solid $grey4;
+
+                a {
+                    max-width: 12%;
+                    transition: 0.2s;
+
+                    &:hover {
+                        opacity: 0.7;
+                        scale: 0.95;
+                    }
+
+                    img {
+                        min-height: 25%;
+                        max-height: 50%;
+                    }
+                }
+
+            }
+        }
+
+        .news-network {
+            display: flex;
+            justify-content: space-between;
         }
     }
 }
