--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,10 +19,15 @@ body {
   max-width: 100vw;
   background: #1B1B1B;
   height: 100vh;
+  cursor: url(CURSOR_URL), auto;
 }
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+button {
+  background: none;
 }
 
 nav {
@@ -405,13 +410,15 @@ header .header-right .marker {
 .news .news-container .news-last .news-btn .btn-news {
   padding: 50px 45px 20px 20px;
   border-radius: 20px;
-  opacity: 0.85;
+  opacity: 0.8;
   cursor: pointer;
-  transition: 0.2s;
+  transition: 0.3s ease;
   display: block;
 }
 .news .news-container .news-last .news-btn .btn-news:hover {
   opacity: 1;
+  scale: 1.03;
+  border-radius: 17px;
 }
 .news .news-container .news-last .news-btn .btn-news h4 {
   color: #111111;
@@ -424,10 +431,12 @@ header .header-right .marker {
   margin-bottom: 0;
   line-height: 20px;
   opacity: 1;
-  z-index: 1;
 }
 .news .news-container .news-last .news-btn .red {
   background: url("../img/newsorange.png") center/cover;
+}
+.news .news-container .news-last .news-btn .red h2 {
+  opacity: 1;
 }
 .news .news-container .news-last .news-btn .green {
   background: url("../img/newsteal.png") center/cover;
@@ -437,4 +446,27 @@ header .header-right .marker {
 }
 .news .news-container .news-last .news-btn .purple {
   background: url("../img/newspurple.png") center/cover;
+}
+.news .news-container .news-last .news-partnairs {
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 60px;
+  border-bottom: 1px solid #4A4A4A;
+}
+.news .news-container .news-last .news-partnairs a {
+  max-width: 12%;
+  transition: 0.2s;
+}
+.news .news-container .news-last .news-partnairs a:hover {
+  opacity: 0.7;
+  scale: 0.95;
+}
+.news .news-container .news-last .news-partnairs a img {
+  min-height: 25%;
+  max-height: 50%;
+}
+.news .news-container .news-network {
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
