--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -2,7 +2,7 @@ header {
     display: grid;
     grid-template-columns: 50% 50%;
     height: 100vh;
-    background: #1d1d1d url("../../svg/isoheaderbg.svg") center no-repeat;
+    background: #1d1d1d url("../svg/isoheaderbg.svg") center no-repeat;
     background-size: cover;
     opacity: 0;
     animation: headerAnim 2.5s forwards;
@@ -79,8 +79,11 @@ header {
             }
 
             .header-buttons {
+                display: flex;
+                justify-content: space-between;
+                max-width: 300px;
 
-                button {
+                .button {
                     color: $blackf;
                     padding: 16px 26px;
                     border-radius: 8px;
@@ -88,6 +91,8 @@ header {
                     font-size: 1.1rem;
                     transition: 0.2s;
                     cursor: pointer;
+                    transform: translateY(0);
+                    display: block;
 
                     &:hover {
                         opacity: 0.8;
@@ -95,15 +100,15 @@ header {
                     }
                 }
 
-                .button-blue {
+                .header-blue {
                     background: $color3;
                 }
 
-                .button-purple {
+                .header-purple {
                     background: #A334FB;
                 }
 
-                .button-green {
+                .header-green {
                     background: $color5;
                 }
             }
