--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -2,103 +2,157 @@
     background: $black1;
     display: flex;
     justify-content: center;
-    padding: 60px 0;
+    padding: 60px 0 120px;
 
     .news-container {
-        max-width: 1130px;
-        margin: 0 auto;
+        max-width: 1110px;
 
-        .news-last {
+        h2 {
+            font-size: 2.8rem;
+            font-weight: 600;
+            margin-bottom: 25px;
+        }
 
-            h2 {
-                font-size: 2.8rem;
-                font-weight: 600;
-                margin-bottom: 25px;
-            }
+        .news-btn {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 30px;
+            width: 1130px;
 
-            .news-btn {
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 30px;
+            .btn-news {
+                padding: 50px 45px 20px 20px;
+                border-radius: 20px;
+                opacity: 0.8;
+                cursor: pointer;
+                transition: 0.3s ease;
+                display: block;
 
-                .btn-news {
-                    padding: 50px 45px 20px 20px;
-                    border-radius: 20px;
-                    opacity: 0.8;
-                    cursor: pointer;
-                    transition: 0.3s ease;
-                    display: block;
 
-                    &:hover {
-                        opacity: 1;
-                        scale: 1.03;
-                        border-radius: 17px;
-                    }
-
-                    h4 {
-                        color: $blackf;
-                        opacity: 0.6;
-                    }
-
-                    h2 {
-                        font-size: 1.2rem;
-                        padding-top: 6px;
-                        max-width: 200px;
-                        margin-bottom: 0;
-                        line-height: 20px;
-                        opacity: 1;
-                    }
+                &:hover {
+                    opacity: 1;
+                    scale: 1.03;
+                    border-radius: 17px;
                 }
 
-                .red {
-                    background: url("../img/newsorange.png") center/cover;
-
-                    h2 {
-                        opacity: 1;
-                    }
+                h4 {
+                    color: $blackf;
+                    opacity: 0.6;
                 }
 
-                .green {
-                    background: url("../img/newsteal.png") center/cover;
-                }
-
-                .blue {
-                    background: url("../img/newsblue.png") center/cover;
-                }
-
-                .purple {
-                    background: url("../img/newspurple.png") center/cover;
+                h2 {
+                    font-size: 1.2rem;
+                    padding-top: 6px;
+                    max-width: 200px;
+                    margin-bottom: 0;
+                    line-height: 20px;
+                    opacity: 1;
                 }
             }
 
-            .news-partnairs {
-                margin-top: 100px;
-                display: flex;
-                justify-content: space-between;
-                padding-bottom: 60px;
-                border-bottom: 1px solid $grey4;
+            .red {
+                background: url("../img/newsorange.png") center/cover;
 
-                a {
-                    max-width: 12%;
-                    transition: 0.2s;
+                h2 {
+                    opacity: 1;
+                }
+            }
 
-                    &:hover {
-                        opacity: 0.7;
-                        scale: 0.95;
-                    }
+            .green {
+                background: url("../img/newsteal.png") center/cover;
+            }
 
-                    img {
-                        min-height: 25%;
-                        max-height: 50%;
-                    }
+            .blue {
+                background: url("../img/newsblue.png") center/cover;
+            }
+
+            .purple {
+                background: url("../img/newspurple.png") center/cover;
+            }
+        }
+
+        .news-partnairs {
+            margin-top: 100px;
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 90px;
+            border-bottom: 1px solid $grey4;
+
+            a {
+                transition: 0.2s;
+
+                &:hover {
+                    opacity: 0.7;
+                    scale: 0.95;
                 }
 
+                img {
+                    height: 25px;
+                }
             }
+
         }
 
         .news-network {
             display: flex;
             justify-content: space-between;
+            margin-top: 60px;
+
+            .network-live {
+                max-width: 450px;
+            }
+
+            h2 {
+                line-height: 1.1;
+                letter-spacing: -2px;
+                margin-bottom: 30px;
+            }
+
+            p {
+                margin-bottom: 40px;
+                font-size: 1.2rem;
+                line-height: 1.4;
+                opacity: 0.8;
+            }
+
+            .network-btn {
+                color: $white;
+                padding: 16px 26px;
+                border-radius: 8px;
+                font-weight: 600;
+                font-size: 1.1rem;
+                transition: 0.2s;
+                cursor: pointer;
+                background-color: $color3;
+                display: block;
+                max-width: 260px;
+
+                &:hover {
+                    opacity: 0.8;
+                    transform: translateY(2px);
+                }
+            }
+        }
+
+        .numbs-content {
+            text-align: right;
+            margin-bottom: 40px;
+
+            h4 {
+                color: #888888;
+                font-size: 1rem;
+                text-transform: uppercase;
+                line-height: 1.4;
+                letter-spacing: 1px;
+                margin-bottom: 10px;
+                font-weight: 600;
+            }
+
+            h3 {
+                font-size: 2.8rem;
+                letter-spacing: 0;
+                margin-bottom: 10px;
+                line-height: 1.2;
+            }
         }
     }
 }
