Commencement de la deuxieme section + boutons

--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -123,8 +123,7 @@
                 transition: 0.2s;
                 cursor: pointer;
                 background-color: $color3;
-                display: block;
-                max-width: 260px;
+                display: inline-block;
 
                 &:hover {
                     opacity: 0.8;
