--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -55,12 +55,9 @@ body {
     max-width: 100vw;
     background: $black3;
     height: 100vh;
+    text-align: left;
 }
 
 ::-webkit-scrollbar {
     display: none;
-}
-
-button {
-    background: none;
 }
