--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -79,10 +79,20 @@
 
             a {
                 transition: 0.2s;
+                transform: translate3D(0px, 100%, 0px);
+                opacity: 0;
+                animation: newsAnim 1.5s both;
 
                 &:hover {
                     opacity: 0.7;
                     scale: 0.95;
+                }
+
+                @keyframes newsAnim {
+                    to {
+                        transform: none;
+                        opacity: 1;
+                    }
                 }
 
                 img {
