--- a/assets/style/layout/_section3.scss
+++ b/assets/style/layout/_section3.scss
@@ -1,38 +1,39 @@
 .section-use {
     position: relative;
     text-align: center;
+
+    .use-img {
+
+        img {
+            width: 100%;
+            position: absolute;
+            top: -3px;
+            left: 0;
+            z-index: -1;
+        }
+
+        h2 {
+            color: $blackf;
+            font-size: 10rem;
+            letter-spacing: -10px;
+            margin-bottom: 10px;
+            line-height: 1.1;
+            padding-top: 520px;
+        }
+
+        h3 {
+            color: #888888;
+            font-size: 2.8rem;
+            line-height: 1.1;
+            letter-spacing: -2px;
+            max-width: 500px;
+            margin: 0 auto 30px;
+        }
+    }
 }
 
 .use-content {
-    padding-top: 520px;
-    z-index: 0;
-    background: white;
-
-    img {
-        width: 100%;
-        position: absolute;
-        top: -3px;
-        left: 0;
-        z-index: 0;
-    }
-
-    h2 {
-        color: $blackf;
-        font-size: 10rem;
-        letter-spacing: -10px;
-        margin-bottom: 10px;
-        line-height: 1.1;
-        z-index: 1;
-    }
-
-    h3 {
-        color: #888888;
-        font-size: 2.8rem;
-        line-height: 1.1;
-        letter-spacing: -2px;
-        max-width: 500px;
-        margin: 0 auto 30px;
-    }
+    background: $white;
 
     p {
         color: $blackf;
@@ -47,7 +48,7 @@
         display: flex;
         z-index: 1;
         justify-content: space-around;
-        max-width: 500px;
+        max-width: 480px;
         margin: 0 auto;
 
         .network-btn {
@@ -67,7 +68,51 @@
                 opacity: 0.8;
                 transform: translateY(2px);
             }
+
+            &.netgreen {
+                background: #15D188;
+            }
         }
     }
+}
+
+.use-console {
+    background: $white;
+    padding-top: 100px;
+
+    &__container {
+        max-width: 1100px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+
+        &--second {
+            background: #F5F7F9;
+            padding: 26px 40px;
+            max-width: 355px;
+            border-radius: 10px;
+
+
+            h4 {
+                font-size: 0.9rem;
+                text-transform: uppercase;
+                line-height: 1.4;
+                letter-spacing: 1px;
+                margin-bottom: 10px;
+                color: $blackf;
+            }
+
+            p {
+                font-size: 1rem;
+                margin: 0 auto;
+                line-height: 1.4;
+                opacity: 0.8;
+                color: $blackf;
+            }
+        }
+    }
+
+    &__principal {}
+
 
 }
