--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -702,19 +702,21 @@ header .header-right .marker {
 
 .use-console {
   background: #FFFFFF;
-  padding-top: 100px;
+  padding: 100px 0;
 }
 .use-console__container {
-  max-width: 1100px;
+  max-width: 1080px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 .use-console__container--second {
   background: #F5F7F9;
   padding: 26px 40px;
   max-width: 355px;
   border-radius: 10px;
+  margin: 0 10px;
 }
 .use-console__container--second h4 {
   font-size: 0.9rem;
@@ -730,4 +732,71 @@ header .header-right .marker {
   line-height: 1.4;
   opacity: 0.8;
   color: #111111;
+}
+.use-console__principal {
+  display: flex;
+  max-width: 1060px;
+  margin: 0 auto;
+  background: #F5F7F9;
+  padding: 50px;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.use-console__principal--left {
+  text-align: left;
+}
+.use-console__principal--left h3 {
+  color: #111111;
+  font-size: 2.8rem;
+  letter-spacing: -2px;
+  line-height: 1.1;
+  margin-bottom: 30px;
+  max-width: 600px;
+}
+.use-console__principal--left p {
+  color: #111111;
+  margin-bottom: 10px;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.4;
+  opacity: 0.8;
+  max-width: 590px;
+}
+.use-console__principal--left a {
+  color: #3131F0;
+  text-decoration: underline;
+}
+.use-console__principal--right {
+  background: url("../img/console2.png") left center;
+  width: 35%;
+  position: absolute;
+  right: 0%;
+  top: 0px;
+  bottom: 0px;
+  overflow: hidden;
+  border-radius: 10px 0 0 10px;
+  background-size: cover;
+}
+
+.use-partnairs {
+  background: #FFFFFF;
+  padding-top: 30px;
+}
+.use-partnairs h4 {
+  color: #888888;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.use-partnairs__logo {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding-bottom: 100px;
+}
+.use-partnairs__logo img {
+  height: 30px;
+  margin: 30px;
 }/*# sourceMappingURL=style.css.map */
