--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -863,4 +863,75 @@ header .header-right .marker {
   scale: 1.08;
   background: #4A4A4A;
   box-shadow: 0 82px 54px -50px rgba(0, 0, 0, 0.5);
+}
+
+.footer-top {
+  background: #1B1B1B;
+}
+.footer-top__container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+.footer-top__container--mail {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+.footer-top__container--mail h3 {
+  font-size: 1.7rem;
+  margin-bottom: 20px;
+}
+.footer-top__container--mail .text-mail {
+  background: rgba(255, 255, 255, 0.1);
+  min-width: 300px;
+  height: 40px;
+  font-size: 1rem;
+  border-radius: 6px;
+  border: none;
+  color: #FFFFFF;
+  padding-left: 10px;
+}
+.footer-top__container--mail .button-mail {
+  color: #FFFFFF;
+  height: 43px;
+  padding: 0 20px;
+  border-radius: 6px;
+  font-weight: 500;
+  font-size: 1rem;
+  transition: 0.2s ease;
+  cursor: pointer;
+  background-color: #474DFF;
+  display: inline-block;
+  margin-left: 10px;
+}
+.footer-top__container--mail .button-mail:hover {
+  background: #3B41E1;
+}
+.footer-top__container--index {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(133, 133, 133, 0.5);
+  border-bottom: 1px solid rgba(133, 133, 133, 0.5);
+  padding: 40px 0;
+}
+.footer-top__container--index_categorie h5 {
+  font-size: 0.9rem;
+  margin: 10px 0;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.footer-top__container--index_categorie a {
+  color: #aaa;
+  font-weight: 300;
+  font-size: 1.1rem;
+  line-height: 26px;
+  transition: 0.2s ease;
+}
+.footer-top__container--index_categorie a:hover {
+  color: #FFFFFF;
+}
+
+.footer-bottom {
+  background: #141617;
 }/*# sourceMappingURL=style.css.map */
